[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Controls/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/TitleScreen.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/OdibeeSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -100.0
margin_bottom = 100.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="HBoxContainer"]
margin_left = 735.0
margin_right = 935.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 985.0
margin_right = 1185.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "127.0.0.1"
placeholder_text = "ip address"

[node name="PortEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "6996"
placeholder_text = "port"

[node name="ConnectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "Connect"

[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
